# barber-system

./: CMakeLists.txt  LICENSE  README.md  cliente_bib.c  cliente_bib.h  data_bib.c  data_bib.h  login.c  login.h  logo.h  main.c  produtos_bib.c  produtos_bib.h  relatorio_venda.c  relatorio_venda.h  servicos_bib.c  servicos_bib.h  vendas_bib.c  vendas_bib.h
