cmake_minimum_required(VERSION 3.17)
project(Projeto_barbearia_Clion_v1_0 C)

set(CMAKE_C_STANDARD 99)

add_executable(Projeto_barbearia_Clion_v1_0 main.c logo.h cliente_bib.c produtos_bib.h data_bib.h produtos_bib.c servicos_bib.h servicos_bib.c data_bib.c vendas_bib.h vendas_bib.c login.h login.c relatorio_venda.h relatorio_venda.c)